--- a/Torpedo/Torpedo.csproj
+++ b/Torpedo/Torpedo.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
