--- a/Torpedo/Torpedo.csproj
+++ b/Torpedo/Torpedo.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Views\" />
-    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
 
 </Project>
